<resources>
    <string name="app_name">Qoutes</string>
    <string name="title_activity_spash">SpashActivity</string>
    <string name="speddytest">SpeddyTest</string>
    <string name="enter_user">Enter your user</string>
    <string name="enter_password">Enter your password</string>
    <string name="text_login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_connec">¡Ups! Hay un problema de conexión...</string>
    <string name="error_playservices">Se requiere Google Play Services para usar la app</string>
    <string name="error_password">Ingresa correctamente tu contraseña</string>
    <string name="error_mail">Ingresa correctamente tu email</string>
    <string name="my_home">Noticias</string>
    <string name="spanish">Español</string>
    <string name="english">English</string>
    <string name="descargar">Download</string>
    <string name="thank_you">Thank you Speedy Mobil</string>
    <string name="tu_msisdn_es">Tu msisdn es:</string>
    <string name="error_msidn">Da permiso para ver su número </string>
    <string name="show_detail_quote">Show detail quote Android native</string>
    <string name="share">how detail quote React native</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_react">ReactActivity</string>
    <string name="rating">Rating</string>
    <string name="rate_this_quote">Rate this quote</string>
    <string name="rating_succes">Your rating for this qoute is:</string>
</resources>
