<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/closeMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_name"
        android:tint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close_black" />


    <View
        android:id="@+id/dividerOne"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailQoute" />

    <TextView
        android:id="@+id/detailQoute"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:drawableLeft="@drawable/ic_greek"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:text="@string/show_detail_quote"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeMenu" />

    <View
        android:id="@+id/dividerTwo"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionShare" />

    <TextView
        android:id="@+id/optionShare"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:drawableLeft="@drawable/ic_greek"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:text="@string/share"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailQoute">


    </TextView>


    <TextView
        android:id="@+id/saveQoute"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:drawableLeft="@drawable/ic_greek"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:text="Save qoute"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerTwo" />


    <View
        android:id="@+id/dividerThree"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveQoute" />



</androidx.constraintlayout.widget.ConstraintLayout>