<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">


                <ImageView
                    android:id="@+id/imgDatailNews"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_greek" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.40" />

                <TextView
                    android:id="@+id/nameBrand"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_thin"
                    android:maxLines="12"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imgDatailNews"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".45" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <View
                android:id="@+id/lineView"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline7" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/welcome" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_rating"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/cardview_dark_background"
                android:elevation="2dp"
                android:gravity="center"
                android:text="@string/rating"
                android:textAllCaps="false"
                android:textAppearance="@style/Theme.MaterialComponents.Light.DarkActionBar"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                app:cornerRadius="20dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contentRating"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:layout_marginTop="16dp">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/cardview_dark_background"
                    android:text="@string/rating_succes"
                    app:layout_constraintBottom_toBottomOf="@+id/ratinValue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ratinValue" />

                <TextView
                    android:id="@+id/ratinValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:drawableEnd="@drawable/ic_star"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.015"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="4.5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
